# fcs-py

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build-exe.ps1  fcs.py  flim_labs-1.0.64-cp312-none-win_amd64.whl  flim_labs-1.0.66-cp312-none-win_amd64.whl  load_data.py  requirements.txt  setup.py  test.py
.github/workflows/: build.yaml
components/: acquisitions_progress_bar.py  animations.py  box_message.py  buttons.py  canvas.py  channel_name_utils.py  channels_control.py  channels_detection.py  check_card.py  controls_bar.py  controls_bar_builder.py  correlations_matrix.py  data_export_controls.py  fancy_checkbox.py  fcs_controller.py  file_utilities.py  flex_grid_layout.py  format_utilities.py  general_utilities.py  gradient_text.py  gui_styles.py  helpers.py  input_number_control.py  input_params_controls.py  intensity_tracing_controller.py  layout_utilities.py  link_widget.py  loading_spinner.py  logo_utilities.py  messages_utilities.py  plots_config_widget.py  progress_bar.py  read_data.py  rename_channel_modal.py  select_control.py  settings.py  switch_control.py  tau_control.py  time_tagger.py  top_bar.py  (+1 more)
docs/: changelog.md  index.md
docs/python-flim-labs/: fcs-file-format.md
docs/v1.0/: index.md
docs/v1.1/: index.md
export_data_scripts/: exported_data_script.m  exported_data_script.py  fcs_script.m  fcs_script.py  script_files_utils.py  time_tagger_script.py
fcs-venv/: pyvenv.cfg
processing/: README.md
src/: bin_processing.rs  export_data.rs  fcs_post_processing.rs  file_processing.rs  lib.rs  models.rs  utils.rs
venv-fcs-1/: pyvenv.cfg
(+15 files in other folders)
