[package]
name = "fcs_flim"
version = "0.1.0"
edition = "2021"

[lib]
name = "fcs_flim"

[dependencies]
pyo3 = { version = "0.21.2" , features = ["extension-module"] }
rayon = "1.10.0"
serde = "1.0.198"
dirs = "5.0.1"
serde_derive = "1.0.198"
serde_json = "1.0.108"
chrono = "0.4.38"
byteorder = "1.5.0"
tokio = { version = "1.37.0", features = ["full"] }
